--- a/ProbabilityCalc/ProbabilityCalc.fsproj
+++ b/ProbabilityCalc/ProbabilityCalc.fsproj
@@ -11,4 +11,9 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.2" />
+    <PackageReference Include="FSharp.Data" Version="4.2.2" />
+  </ItemGroup>
+
 </Project>
