Implement processing of OutputValue into lists of possibilities

--- a/ProbabilityCalc/ProbabilityCalc.fsproj
+++ b/ProbabilityCalc/ProbabilityCalc.fsproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Prob.fs" />
-    <Compile Include="ProcessProb.fs" />
+    <Compile Include="Processing.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
