--- a/ProbabilityCalc/ProbabilityCalc.fsproj
+++ b/ProbabilityCalc/ProbabilityCalc.fsproj
@@ -6,14 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Probability.fs" />
-    <Compile Include="Processing.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="5.0.2" />
-    <PackageReference Include="FSharp.Data" Version="4.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DiceTracker\DiceTracker.fsproj" />
   </ItemGroup>
 
 </Project>
