Add website project

--- a/DiceTracker/DiceTracker.fsproj
+++ b/DiceTracker/DiceTracker.fsproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="Probability.fs" />
     <Compile Include="Processing.fs" />
   </ItemGroup>
