--- a/DiceTracker.Website/DiceTracker.Website.fsproj
+++ b/DiceTracker.Website/DiceTracker.Website.fsproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Utilities.fs" />
     <Compile Include="MonacoEditor.fs" />
+    <Compile Include="Compiler.fs" />
     <Compile Include="Evaluation.fs" />
     <Compile Include="Main.fs" />
     <Compile Include="Startup.fs" />
@@ -16,8 +18,10 @@
     <PackageReference Update="FSharp.Core" Version="5.0.2" />
     <PackageReference Include="Bolero" Version="0.17.25" />
     <PackageReference Include="Bolero.Build" Version="0.17.25" />
+    <PackageReference Include="Bolero.HotReload" Version="0.17.9" />
+    <PackageReference Include="Bolero.Templates" Version="0.17.12" />
     <PackageReference Include="FSharp.Compiler.Service" Version="40.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" />
     <PackageReference Include="XPlot.Plotly" Version="4.0.3" />
   </ItemGroup>
 
