--- a/DiceTracker.Website/DiceTracker.Website.fsproj
+++ b/DiceTracker.Website/DiceTracker.Website.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Compiler.fs" />
     <Compile Include="Evaluation.fs" />
     <Compile Include="Main.fs" />
+    <Compile Include="App.fs" />
     <Compile Include="Startup.fs" />
   </ItemGroup>
 
@@ -34,6 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="loading.html" />
+    <Content Include="main.html" />
     <Folder Include="wwwroot\monaco\" />
   </ItemGroup>
 
