--- a/DiceTracker.Website/DiceTracker.Website.fsproj
+++ b/DiceTracker.Website/DiceTracker.Website.fsproj
@@ -16,13 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="5.0.2" />
+    <PackageReference Update="FSharp.Core" Version="6.0.0-beta.21452.7" />
     <PackageReference Include="Bolero" Version="0.17.25" />
     <PackageReference Include="Bolero.Build" Version="0.17.25" />
     <PackageReference Include="Bolero.HotReload" Version="0.17.9" />
     <PackageReference Include="Bolero.Templates" Version="0.17.12" />
-    <PackageReference Include="FSharp.Compiler.Service" Version="40.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" />
+    <PackageReference Include="FSharp.Compiler.Service" Version="41.0.0-preview.21452.7" />
     <PackageReference Include="XPlot.Plotly" Version="4.0.3" />
   </ItemGroup>
 
