--- a/DiceTracker/DiceTracker.fsproj
+++ b/DiceTracker/DiceTracker.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="5.0.2" />
+    <PackageReference Update="FSharp.Core" Version="6.0.0-beta.21452.7" />
   </ItemGroup>
 
   <ItemGroup>
