--- a/DiceTracker.Website.DevServer/DiceTracker.Website.DevServer.fsproj
+++ b/DiceTracker.Website.DevServer/DiceTracker.Website.DevServer.fsproj
@@ -17,7 +17,7 @@
   </ItemGroup>
     
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.0-beta.21452.7" />
+    <PackageReference Update="FSharp.Core" Version="5.0.3-dev.final" />
     <PackageReference Include="Bolero.HotReload.Server" Version="0.17.9" />
     <PackageReference Include="Bolero.Server" Version="0.17.25" />
     <PackageReference Include="Bolero.Templates" Version="0.17.12" />
