--- a/ProbabilityCalc/ProbabilityCalc.fsproj
+++ b/ProbabilityCalc/ProbabilityCalc.fsproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.0-beta.21452.7" />
+    <PackageReference Update="FSharp.Core" Version="5.0.3-dev.final" />
   </ItemGroup>
 
   <ItemGroup>
