Switch to using BigRational for probability values

--- a/DiceTracker/DiceTracker.fsproj
+++ b/DiceTracker/DiceTracker.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="5.0.3-dev.final" />
+    <PackageReference Include="MathNet.Numerics.FSharp" Version="5.0.0-alpha02" />
   </ItemGroup>
 
   <ItemGroup>
