Implement small value type passing when possible

--- a/DiceTracker.Website/DiceTracker.Website.fsproj
+++ b/DiceTracker.Website/DiceTracker.Website.fsproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <BlazorLinkerDescriptor Include="linker.xml" />
+    <None Include="linker.xml" />
     <Content Include="loading.html" />
     <Content Include="main.html" />
     <Folder Include="wwwroot\monaco\" />
