--- a/DiceTracker.Website/DiceTracker.Website.fsproj
+++ b/DiceTracker.Website/DiceTracker.Website.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Utilities.fs" />
     <Compile Include="Compiler.fs" />
     <Compile Include="Evaluation.fs" />
+    <Compile Include="Ace.fs" />
     <Compile Include="Main.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Startup.fs" />
