Update publish action to use working-directory

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,8 @@ jobs:
           include-prerelease: true
       - run: dotnet workload install wasm-tools
       - name: Build website
-        run: dotnet publish repo/DiceTracker.Website/DiceTracker.Website.csproj -c Release --self-contained -r=browser-wasm -o dist/ -p:RunAOTCompilation=true -p:PublishedTrimmed=true -p:TrimMode=link
+        run: dotnet publish -c Release --self-contained -r=browser-wasm -o dist/ -p:RunAOTCompilation=true -p:PublishedTrimmed=true -p:TrimMode=link
+        working-directory: repo/DiceTracker.Website
       - name: Fix base path
         shell: pwsh
         working-directory: dist/wwwroot
